# visionbased-multipage-classifier

./: .gitignore  README.md  pyproject.toml
dataset-generator/: download_data.ipynb  pyproject.toml  scraper.py
multipage_classifier/: dataset.py  dual_classifier.py  encoder.py  model.ipynb  multipage_transformer.py  page_classifier.py  page_comparison_encoder.py  preprocessor.py  visual_page_classifier.py
multipage_classifier/dataset-generator/: create_datasets.ipynb  data_science.ipynb
multipage_classifier/datasets/: data_science.ipynb  data_script.ipynb  mosaic_dataset.py  test_dataset.ipynb  transformer_dataset.py  ucsf_dataset.py  utils.py
multipage_classifier/decoder/: bart_decoder.py  donut_decoder.py  separator.py
multipage_classifier/encoder/: multipage_encoder.py  swin_encoder.py  vision_encoder.py
training/: model_saver.ipynb  playground.ipynb  pyproject.toml
training/dual_classifier/: lightning_module.py  test_encoder.ipynb  train.py
training/evaluation/: qualitative_evaluation.ipynb  quantitative_evaluation.py
training/multipage_transformer/: lightning_module.py  train.py
training/page_classifier/: lightning_module.py  playground.ipynb  train.py
training/page_comparsion_encoder/: lightning_module.py  train.py
training/swin_encoder/: lightning_module.py  test_encoder.ipynb  train.py
training/transformer/: lightning_module.py  playground.ipynb  train.py
training/utils/: lightning.py
training/vision_encoder/: lightning_module.py  test_encoder.ipynb  train.py
training/visual_page_classifier/: lightning_module.py  train.py
