[tool.poetry]
name = "multipage-classifier"
version = "0.1.0"
description = ""
authors = ["Johannes Scheibe <scheibe.johannes@t-online.de>"]
readme = "README.md"
packages = [{include = "multipage_classifier"}]

[tool.poetry.dependencies]
python = "^3.10.0"
torch = "==2.0.0"
torchvision = "^0.15.0"
pytorch-lightning = "^1.9.1"
transformers = "^4.26.0"
sentencepiece = "^0.1.97"
pydantic = "^1.10.5"
scikit-learn = "^1.2.0"
nltk = "^3.8.1"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
