[tool.poetry]
name = "multipage-dataset-generator"
version = "0.1.0"
description = ""
authors = ["johannes-scheibe <scheibe.johannes@t-online.de>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.21.2"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
selenium = "^4.8.0"
tqdm = "^4.64.1"
pdf2image = "^1.16.2"
matplotlib = "^3.7.0"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
