[tool.poetry]
name = "multipage-classifier-training"
version = "0.1.0"
description = ""
authors = ["Johannes Scheibe <scheibe.johannes@t-online.de>"]
packages = [{include = "utils"}]

[tool.poetry.dependencies]
multipage-classifier = { path = "../", develop=true}
python = ">=3.10.0,<3.13"
torch = ">=2.0.0, !=2.0.1"
torchvision = "^0.15.0"
pytorch-lightning = "^2.0.0"
transformers = "^4.26.0"
tensorboard = "^2.12.0"
pydantic = "^1.10.5"
scikit-learn = "^1.2.0"
nltk = "^3.8.1"
matplotlib = "^3.7.1"
scipy = "1.11.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
